welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:9: error: not found: value deuxi?meTriplet
    if (nums(i) == premierTriplet) {deuxi?meTriplet = true}
                                    ^noTriples:14: error: type mismatch;
 found   : Unit
 required: Boolean
  if ((deuxiemeTriplet == troisiemeTriplet) & (troisiemeTriplet = true)) {return false}
                                                                ^